room_list.htmlの合計で町内会費を追加

--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -83,7 +83,7 @@
         <td class="has-text-right">{{total_parking|intcomma}}</td>
         <td></td>
         <td></td>
-        <td class="has-text-right">{{total|add:total_parking|intcomma}}</td>
+        <td class="has-text-right">{{total|add:total_parking|add:total_membershipfee|intcomma}}</td>
       </tbody>
     </table>
   </div>
