mobile用メニューの調整

--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -11,9 +11,9 @@
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
-    <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
-    <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
-    <a class="navbar-item" href="{% url 'overview:overview' %}">概要</a>
+    {% comment %} <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a> {% endcomment %}
+    {% comment %} <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a> {% endcomment %}
+    {% comment %} <a class="navbar-item" href="{% url 'overview:overview' %}">概要</a> {% endcomment %}
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
