--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -53,6 +53,16 @@
     </div>
     <div class="column">
       <div class="menubox has-text-centered">
+        <a class="white_color" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
+      </div>
+    </div>
+    <div class="column">
+      <div class="menubox has-text-centered">
+        <a class="white_color" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
+      </div>
+    </div>
+    <div class="column">
+      <div class="menubox has-text-centered">
         <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="white_color">パンフレット</a>
       </div>
     </div>
