--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -27,7 +27,7 @@
     <br>
     <div class='my_button has-text-centered'>
       <button type='submit' class='button is-primary'>読込み</button>
-      <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+      <a class="button is-danger" href="{% url 'notice:news_card' %}">戻る</a>
     </div>
   </form>
 </div>
