--- a/overview/templates/overview/room_form.html
+++ b/overview/templates/overview/room_form.html
@@ -31,30 +31,95 @@
     {% endfor %}
 </ul>
 {% endif %}
-<div class="container">
+<div class="container is-fluid">
   <div class="content has-text-centered">
-    <h4>{{title}}</h4>
+  <br>
+    <h4>区分所有者データ</h4>
   </div>
-  <form method='POST' enctype='multipart/form-data' id='form_style'>
-    {{ form.non_field_errors }}
-    {% for field in form %}
+
+  <form method='POST' enctype='multipart/form-data'>
+  {% csrf_token %}
+  <div class='columns'>
+    <div class='column is-half'>
       <div class='field'>
-        <div class='control'>
-          <div class='label'>{{ field.label_tag }}</div>
-          {% if field.help_text %}
-            <span class='helptext'>{{ field.help_text }}</span>
-          {% endif %}
-          <div class='my_field'>{{ field }}</div>
-          {{ field.errors }}
-        </div>
+        <div class='label'>{{form.room_no.label_tag}}</div>
+        <div class='my_field'>{{form.room_no}}</div>
       </div>
-    {% endfor %}
-    {% csrf_token %}
-    <br>
-    <div class='content has-text-centered my_button'>
-      <button type='submit' class='button is-primary'>読込み</button>
-      <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+      <div class='field'>
+        <div class='label'>{{form.room_type.label_tag}}</div>
+        <div class='my_field'>{{form.room_type}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.owner.label_tag}}</div>
+        <div class='my_field'>{{form.owner}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.tenant.label_tag}}</div>
+        <div class='my_field'>{{form.tenant}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.parking_fee.label_tag}}</div>
+        <div class='my_field'>{{form.parking_fee}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.bicycle_fee.label_tag}}</div>
+        <div class='my_field'>{{form.bicycle_fee}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.bike_fee.label_tag}}</div>
+        <div class='my_field'>{{form.bike_fee}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.chounaikai.label_tag}}</div>
+        <div class='my_field'>{{form.chounaikai}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.mishuu_fee.label_tag}}</div>
+        <div class='my_field'>{{form.mishuu_fee}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.comment.label_tag}}</div>
+        <div class='my_field'>{{form.comment}}</div>
+      </div>
     </div>
+    <div class='column is-half'>
+      <div class='field'>
+        <div class='label'>{{form.zip_code.label_tag}}</div>
+        <div class='my_field'>{{form.zip_code}}</div>
+        <span class='helptext'>{{form.zip_code.help_text }}</span>
+        {{ form.zip_code.errors }}
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.prefecture.label_tag}}</div>
+        <div class='my_field'>{{form.prefecture}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.municipality.label_tag}}</div>
+        <div class='my_field'>{{form.municipality}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.house_number.label_tag}}</div>
+        <div class='my_field'>{{form.house_number}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.building.label_tag}}</div>
+        <div class='my_field'>{{form.building}}</div>
+      </div>
+      <div class='field'>
+        <div class='label'>{{form.tel_number.label_tag}}</div>
+        <div class='my_field'>{{form.tel_number}}</div>
+        <span class='helptext'>{{form.tel_number.help_text }}</span>
+        {{ form.tel_number.errors }}
+      </div>
+
+  <br>
+  <div class='content has-text-centered my_button'>
+    <button type='submit' class='button is-primary'>読込み</button>
+    <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+  </div>
+
+    </div>
+  </div>
   </form>
   <br>
 {% endblock content %}
