--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -21,7 +21,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      <a class='navbar-item' href='javascript:void(0);' onclick='window.history.back();'>戻る</a>
+      <a class="navbar-item" href="{% url 'overview:overview' %}">戻る</a>
     </div>
   </div>
 </nav>
