--- a/overview/templates/overview/room_form.html
+++ b/overview/templates/overview/room_form.html
@@ -114,7 +114,7 @@
       <br>
       <div class='content has-text-centered my_button'>
         <button type='submit' class='button is-primary'>読込み</button>
-        <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+        <a class="button is-danger" href="{% url 'overview:room_list' %}">キャンセル</a>
       </div>
     </div>
   </div>
