--- a/information/templates/information/information_form.html
+++ b/information/templates/information/information_form.html
@@ -23,7 +23,7 @@
 
 <!-- content -->
 {% block content %}
-<div class="md_container">
+<div class="container is-fluid">
   <br>
   <form action="" method="POST" enctype='multipart/form-data'>
     <div class="content">
