マンション概要で施工会社、分譲会社、管理会社を追加

--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -148,6 +148,21 @@
         <td class="has-text-left">{{ov.delivery_box}}</td>
         <td colspan="2"></td>
       </tr>
+      <tr>
+        <td class="has-text-left">施工会社</td>
+        <td class="has-text-left" colspan="2">{{ov.constraction}}</td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="has-text-left">分譲会社</td>
+        <td class="has-text-left" colspan="2">{{ov.seller}}</td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="has-text-left">管理会社</td>
+        <td class="has-text-left" colspan="2">{{ov.management}}</td>
+        <td colspan="2"></td>
+      </tr>
     </tbody>
   </table>
   <br>
