--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -26,10 +26,7 @@
       <a class="navbar-item" href="{% url 'overview:overview' %}">マンション概要</a>
     </div>
     <div class="navbar-end">
-      {% if user.username == 'sophiag' %}
-        <a class="navbar-item" href="{% url 'register:signup' %}">仮登録</a>
-      {% endif %}
-      {% if user.is_superuser %}
+      {% if perms.register.add_user %}
         <a class="navbar-item" href="{% url 'register:user_list' %}">ユーザ管理</a>
       {% endif %}
       {% if perms.notice.add_news or perms.library.add_file %}
