駐車場使用料の登録日時を追加

--- a/overview/templates/overview/room_form.html
+++ b/overview/templates/overview/room_form.html
@@ -62,6 +62,10 @@
         <div class='my_field'>{{form.parking_fee}}</div>
       </div>
       <div class='field'>
+        <div class='label'>{{form.parking_date.label_tag}}</div>
+        <div class='my_field'>{{form.parking_date}}</div>
+      </div>
+      <div class='field'>
         <div class='label'>{{form.bicycle_fee.label_tag}}</div>
         <div class='my_field'>{{form.bicycle_fee}}</div>
       </div>
