--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -51,6 +51,7 @@
           <th class="has-text-centered">合計</th>
           <th class="has-text-centered">更新日</th>
           <th class="has-text-centered">備考</th>
+          <th class="has-text-centered">駐車場更新日</th>
         </tr>
       </thead>
       <tbody>
@@ -74,6 +75,7 @@
           <td class="has-text-right">{{d.total|add:d.parking_fee|add:d.bicycle_fee|add:d.bike_fee|add:270|intcomma}}</td>
           <td class="has-text-right">{{d.created_date|date:'Y年Ej日'}}</td>
           <td class="has-text-left">{{d.comment|default_if_none:''}}</td>
+          <td class="has-text-left">{{d.parking_date|date:'Y-m'}}</td>
         </tr>
         {% endfor %}
         <td></td>
