--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -28,7 +28,7 @@
 {% endblock navbar %}
 
 {% block content %}
-<div class="container">
+<div class="container is-fluid">
   <div class="content has-text-centered">
     <br>
     <h4>住戸別の管理費等</h4>
