overview項目にインターネットを追加

--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -128,7 +128,7 @@
       </tr>
 
       <tr>
-        <td class="has-text-left" rowspan="4">設備概要</td>
+        <td class="has-text-left" rowspan="5">設備概要</td>
         <td class="has-text-left">専有部給水設備</td>
         <td class="has-text-left">{{ov.private_water_equipment}}</td>
         <td colspan="2"></td>
@@ -146,6 +146,11 @@
       <tr>
         <td class="has-text-left">宅配ボックス</td>
         <td class="has-text-left">{{ov.delivery_box}}</td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="has-text-left">インターネット</td>
+        <td class="has-text-left">{{ov.network}}</td>
         <td colspan="2"></td>
       </tr>
       <tr>
