overview_mobile.htmlの修正

--- a/overview/templates/overview/overview_mobile.html
+++ b/overview/templates/overview/overview_mobile.html
@@ -172,7 +172,7 @@
           <td class="has-text-left has-background-grey-lighter">高度制限</td>
         </tr>
         <tr>
-          <td class="has-text-centered">{{ov.height_limit}} m</td>
+          <td class="has-text-centered">{{ov.height_limit}}</td>
         </tr>
         <tr>
           <td class="has-text-left has-background-grey-lighter">必要駐車場台数</td>
@@ -208,6 +208,12 @@
         </tr>
         <tr>
           <td class="has-text-centered">{{ov.delivery_box}}</td>
+        </tr>
+        <tr>
+          <td class="has-text-left has-background-grey-lighter">インターネット</td>
+        </tr>
+        <tr>
+          <td class="has-text-centered">{{ov.network}}</td>
         </tr>
       </tbody>
     </table>
