overviewにエントランス、防犯カメラ情報を追加

--- a/overview/templates/overview/overview_mobile.html
+++ b/overview/templates/overview/overview_mobile.html
@@ -198,6 +198,18 @@
           <td class="has-text-centered">{{ov.public_water_equipment}}</td>
         </tr>
         <tr>
+          <td class="has-text-left has-background-grey-lighter">共用部エントランス</td>
+        </tr>
+        <tr>
+          <td class="has-text-centered">{{ov.entrance}}</td>
+        </tr>
+        <tr>
+          <td class="has-text-left has-background-grey-lighter">防犯カメラ</td>
+        </tr>
+        <tr>
+          <td class="has-text-centered">{{ov.security}}</td>
+        </tr>
+        <tr>
           <td class="has-text-left has-background-grey-lighter">トランクルーム</td>
         </tr>
         <tr>
