--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -128,7 +128,7 @@
       </tr>
 
       <tr>
-        <td class="has-text-left" rowspan="5">設備概要</td>
+        <td class="has-text-left" rowspan="7">設備概要</td>
         <td class="has-text-left">専有部給水設備</td>
         <td class="has-text-left">{{ov.private_water_equipment}}</td>
         <td colspan="2"></td>
@@ -136,6 +136,16 @@
       <tr>
         <td class="has-text-left">共用部給水設備</td>
         <td class="has-text-left">{{ov.public_water_equipment}}</td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="has-text-left">共用部エントランス</td>
+        <td class="has-text-left">{{ov.entrance}}</td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="has-text-left">防犯カメラ</td>
+        <td class="has-text-left">{{ov.security}}</td>
         <td colspan="2"></td>
       </tr>
       <tr>
