--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
   <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
   <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
+  {% block head %}
+  {% endblock %}
 </head>
 <body>
   {% block navbar %}
