管理費等の表示で月あたりの合計金額を追加表示

--- a/overview/templates/overview/roomtype_list.html
+++ b/overview/templates/overview/roomtype_list.html
@@ -64,9 +64,11 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="has-text-right">{{total_kanrihi|intcomma}}</td>
+        <td class="has-text-right">{{total_shuuzenhi|intcomma}}</td>
+        <td class="has-text-right">{{total_ryokuchi|intcomma}}</td>
+        <td class="has-text-right">{{total_niwa|intcomma}}</td>
+        <td class="has-text-right">{{total_all|intcomma}}</td>
       </tbody>
     </table>
   </div>
