--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -19,6 +19,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
+      <a class="navbar-item" href="{% url 'overview:bicycle_list' %}">自転車置場リスト</a>
     </div>
     <div class="navbar-end">
       <a class="navbar-item" href="{% url 'overview:overview' %}">戻る</a>
