--- a/overview/templates/overview/room_list.html
+++ b/overview/templates/overview/room_list.html
@@ -73,7 +73,11 @@
           <td class="has-text-right">{{d.parking_fee|intcomma}}</td>
           <td class="has-text-right">{{d.bicycle_fee|intcomma}}</td>
           <td class="has-text-right">{{d.bike_fee|intcomma}}</td>
-          <td class="has-text-right">{{d.total|add:d.parking_fee|add:d.bicycle_fee|add:d.bike_fee|add:270|intcomma}}</td>
+          {% if d.chounaikai %}
+            <td class="has-text-right">{{d.total|add:d.parking_fee|add:d.bicycle_fee|add:d.bike_fee|add:270|intcomma}}</td>
+          {% else %}
+            <td class="has-text-right">{{d.total|add:d.parking_fee|add:d.bicycle_fee|add:d.bike_fee|intcomma}}</td>
+          {% endif %}
           <td class="has-text-right">{{d.created_date|date:'Y年Ej日'}}</td>
           <td class="has-text-left">{{d.comment|default_if_none:''}}</td>
           <td class="has-text-left">{{d.parking_date|date:'Y-m'}}</td>
