--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -49,6 +49,7 @@
               <a class="dropdown-item" href="{% url 'overview:import_parkingfee' %}">駐車場費のインポート</a>
               <a class="dropdown-item" href="{% url 'overview:import_bicyclefee' %}">駐輪場費のインポート</a>
             {% endif %}
+            <a class="navbar-item" href="{% url 'control:backupDB' %}">DBバックアップ</a>
           </div>
         </div>
       {% endif %}
