--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
 <div class="content">
   <section class="content has-text-centered">
     <div>
-        <h1>403 Forbidden 居住者専用です。</h1>
+        <h1>Oops!! 管理者に連絡してください。</h1>
     </div>
     {% if exception %}
     <p style="color: red">{{ exception }}</p>
