メニュー画面に「駐車場空き状況図」を追加。

--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -56,6 +56,11 @@
         <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="white_color">パンフレット</a>
       </div>
     </div>
+    <div class="column is-2">
+      <div class="menubox has-text-centered">
+        <a href="https://facility.sophiagardens.org/parking/fig/" target="_blank" class="white_color">駐車場空き状況</a>
+      </div>
+    </div>
   </div>
 </section>
 <hr>
