Macではヒラギノ角ゴシック、その他ではWebフォントのNoto Sans JPを使うように修正

--- a/static/mycss/mycss.css
+++ b/static/mycss/mycss.css
@@ -9,8 +9,10 @@ html {
     color:#333333;
 }
 /* my_footerを使う場合、本体をmargin-bottomでfooterエリアを確保しなければならない。 */
+/* Macではヒラギノ角ゴシック、WindowではWebフォントのNoto Sans JPを使う */
 main {
-    font-family: "ヒラギノ角ゴシック W4","Hiragino Sans",Meiryo,sans-serif;
+    /* font-family: "ヒラギノ角ゴシック W4",'Noto Sans JP',"Hiragino Sans",Meiryo,sans-serif; */
+    font-family: "ヒラギノ角ゴシック W4",'Noto Sans JP',"Hiragino Sans",sans-serif;
     margin-bottom: 40px;
 }
 /* footerだとBulmaのfooterを上書きしてしまう */
