--- a/static/mycss/mycss.css
+++ b/static/mycss/mycss.css
@@ -11,8 +11,7 @@ html {
 /* my_footerを使う場合、本体をmargin-bottomでfooterエリアを確保しなければならない。 */
 /* Macではヒラギノ角ゴシック、WindowではWebフォントのNoto Sans JPを使う */
 main {
-    /* font-family: "ヒラギノ角ゴシック W4",'Noto Sans JP',"Hiragino Sans",Meiryo,sans-serif; */
-    font-family: "ヒラギノ角ゴシック W4",'Noto Sans JP',"Hiragino Sans",sans-serif;
+    font-family: "ヒラギノ角ゴシック W4",'Noto Sans JP',sans-serif;
     margin-bottom: 40px;
 }
 /* footerだとBulmaのfooterを上書きしてしまう */
@@ -137,7 +136,7 @@ div.my_field > textarea {
 }
 /* form入力style */
 #form_style {
-  width: 320px;
+  width: 400px;
   margin: auto;
 }
  /* 767px以下ではwidthを80%にする */
@@ -165,14 +164,14 @@ div.my_field > textarea {
 @media screen and (max-width: 768px) {
   .container.with_mobile {
     max-width: none !important;
-    padding-left:6px;
-    padding-right:6px;
+    padding-left:10px;
+    padding-right:10px;
     width: 100%;
   }
 }
 /*
- グラフ表示用
- https://obel.hatenablog.jp/entry/20160626/1466937585 
+グラフ表示用
+https://obel.hatenablog.jp/entry/20160626/1466937585 
 */
 /* 769px以上ではwidthは60% */
 .graph_container {
