--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -10,9 +10,9 @@
   {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
   <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet"> {% endcomment %}
   <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
   {% block head %}
   {% endblock %}
