--- a/templates/403.html
+++ b/templates/403.html
@@ -13,7 +13,9 @@
     {% if exception %}
     <p style="color: red">{{ exception }}</p>
     {% endif %}
-      <h3><a href="javascript:history.back()">戻る</a></h3>
+      {% comment %} <h3><a href="javascript:history.back()">戻る</a></h3> {% endcomment %}
+      <h3><a class='button is-primary' href='javascript:void(0);' onclick='window.history.back();'>戻る</a></h3>
+
   </section>
 </div>
 {% endblock %}
