--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -21,7 +21,7 @@
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'overview:roomtype_list' %}">管理費等</a>
       {% if perms.overview.view_room %}
-        <a class="navbar-item" href="{% url 'overview:room_list' %}">住戸データ表示</a>
+        {% comment %} <a class="navbar-item" href="{% url 'overview:room_list' %}">住戸データ表示</a> {% endcomment %}
       {% endif %}
     </div>
     <div class="navbar-end">
